<resources>
    <string name="app_name">FuzzyGrain</string>
    <string name="curve_line_desc">Garis lengkung dekoratif</string>
    <string name="pantau">PANTAU</string>
    <string name="gudang">GUDANG</string>
    <string name="project_title">Projek Aplikasi Skripsi</string>
    <string name="grafik">Grafik</string>
    <string name="tabel">Tabel</string>
    <string name="kondisi">Kondisi</string>
    <string name="suhu">Suhu</string>
    <string name="kelembapan">Kelembapan</string>
    <string name="humidity">Kelembapan Udara</string>
    <string name="kadar_air">Kadar Air</string>
    <string name="water">Kadar Air Dalam Gabah :</string>
    <string name="A">A = </string>
    <string name="B">B = </string>
    <string name="C">C = </string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="home_desc">Home</string>
    <string name="judul_dashboard">Kondisi Gudang</string>
    <string name="tombol">Perjam ▼</string>
    <string name="filter">Tanggal ▼</string>
    <string name="menu_perjam">Perjam</string>
    <string name="menu_harian">Harian</string>
    <string name="menu_grafik">Pilih Jenis Grafik</string>
    <string name="menu_suhu">Tren Suhu Gudang</string>
    <string name="menu_water">Tren Kadar Air Dalam Gabah</string>
    <string name="menu_humidty">Tren Kelembapan Udara Gudang</string>
    <string name="menu_kondisi">Tren Kondisi Gudang</string>
    <string name="format_kadar_air">%1$s, %2$s, %3$s</string>
    <string name="Gudang">Level Kondisi Gudang</string>
    <string name="status">A = AMAN   |   B = WASPADA   |   C = PERINGATAN   |   D = BERBAHAYA</string>
</resources>