<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".GrafikKondisiActivity">

    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#1976D2"
        android:paddingTop="40dp"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/judul_dashboard"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home_desc"
            app:tint="@android:color/black" />
    </LinearLayout>

    <!-- DATA UTAMA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="12dp" >

        <!-- 🔹 Kiri: Suhu dan status -->
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/suhu"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStatusKondisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/kondisi"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 🔹 Kanan: Kadar air dan kelembapan -->
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvKelembapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/humidity"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!-- Judul Kadar Air -->
            <TextView
                android:id="@+id/tvKadarAirTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/water"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!-- 3 nilai kadar air: A, B, C -->
            <LinearLayout
                android:id="@+id/layoutKadarAirABC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvKadarAirA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/A"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvKadarAirB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:gravity="left"
                    android:text="@string/B"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvKadarAirC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:gravity="left"
                    android:text="@string/C"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- TANGGAL -->
    <TextView
        android:id="@+id/tvTanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1976D2"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/tanggal"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <!-- FILTER (Sama seperti di TabelActivity) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingTop="0dp"
        android:paddingBottom="8dp">

        <!-- Tombol Filter Tanggal/Bulan -->
        <Button
            android:id="@+id/btnTanggal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingVertical="2dp"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:background="@drawable/bg_button_gray"
            android:backgroundTint="@null"
            android:text="@string/filter"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <!-- Tombol Filter -->
        <Button
            android:id="@+id/btnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingVertical="0dp"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_button_green"
            android:backgroundTint="@null"
            android:text="@string/tombol"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <!-- Keterangan / Judul Grafik -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_kondisi"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/legendContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/legendTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gudang"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#9C27B0"
            android:gravity="center"/>

        <TextView
            android:id="@+id/legendDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="11sp"
            android:textColor="#444444"
            android:gravity="center"
            android:paddingTop="2dp"/>
    </LinearLayout>


    <!-- GRAFIK -->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartKondisi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp" />

</LinearLayout>
