<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="-16dp"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Judul -->
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1976D2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="18dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/judul_dashboard"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/home_desc"
                android:src="@drawable/ic_home" />
        </LinearLayout>

        <!-- Suhu, kelembapan, kadar air -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="8dp">

            <!-- Judul Suhu -->
            <TextView
                android:id="@+id/tvSuhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/suhu"
                android:textColor="#000000"
                android:textSize="45sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="start|center_vertical"
                android:orientation="vertical">

                <!-- Judul Kelembapan -->
                <TextView
                    android:id="@+id/tvKelembapan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/humidity"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <!-- Judul Kadar Air -->
                <TextView
                    android:id="@+id/tvKadarAirTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/water"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <!-- 3 nilai kadar air: A, B, C -->
                <LinearLayout
                    android:id="@+id/layoutKadarAirABC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvKadarAirA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/A"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvKadarAirB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:gravity="left"
                        android:text="@string/B"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvKadarAirC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:gravity="left"
                        android:text="@string/C"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- Kondisi Gudang -->
        <TextView
            android:id="@+id/tvStatusGudang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_status"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:paddingVertical="14dp"
            android:text="@string/kondisi"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Tanggal & jam -->
        <TextView
            android:id="@+id/tvTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#1976D2"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tanggal"
            android:textColor="@android:color/white" />

        <!-- Tombol Tabel -->
        <Button
            android:id="@+id/btnTabel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_button_oval"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/tabel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <!-- Tombol Grafik -->
        <Button
            android:id="@+id/btnGrafik"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_button_oval"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/grafik"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
