<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Teks "PANTAU" -->
    <!-- Geser ke kiri -->

    <!-- Teks "GUDANG" -->

    <TextView
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pantau"
        android:textColor="#1E90FF"
        android:textSize="32sp"
        android:textStyle="italic|bold" />

    <!-- Geser ke kanan -->

    <!-- Garis lengkung (pakai gambar drawable) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/gudang"
        android:textColor="#008000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="242dp"
        android:layout_height="124dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/curve_line_desc"
        android:src="@drawable/curve_line" />
</LinearLayout>
